Static/css/styles.css
/* #region Loader */
#uprogBusyIndicator{
    position:fixed;
    z-index:1500;
    width:100%;
    height:100%;
    color:#fff;
    background-color:#000;
    opacity:.8;
    font-family:Calibri;
    font-size:1.275rem;
    text-align:center;
    padding:18rem 0;
}

/* #endregion */

body{
    background:#f3fffc;
    }

